<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/special_comments"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="15sp"-->
        <!--android:padding="@dimen/_10sdp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/comments"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/rounded_tv"-->
        <!--android:minLines="6"-->
        <!--android:padding="@dimen/_5sdp"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginEnd="@dimen/_10sdp"-->
        <!--android:layout_marginStart="@dimen/_10sdp"-->
        <!--android:layout_marginBottom="@dimen/_10sdp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/in_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/in_progress_bg"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/in_progress"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_orange"
            android:layout_margin="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:text="@string/done"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_orange"
        android:layout_margin="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/close"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"/>

</LinearLayout>