<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />
        </android.support.v7.widget.Toolbar>

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/toolbar"-->
        <!--android:orientation="vertical">-->

        <TextView
            android:id="@+id/welcome_msg"
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/welcome_msg"
            android:textColor="@color/davy_gray"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_msg"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_msg"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/login_msg"
            android:textColor="@color/davy_gray"
            android:textSize="16sp" />

        <!--<LinearLayout-->
        <!--android:id="@+id/number_container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_marginEnd="@dimen/_20sdp"-->
        <!--android:layout_marginStart="@dimen/_20sdp"-->
        <!--android:animateLayoutChanges="true"-->
        <!--android:background="@drawable/rounded_white"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="@dimen/_10sdp">-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_msg"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hint"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
        <!--android:id="@+id/pass_container"-->
        <!--android:layout_below="@+id/email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_marginEnd="@dimen/_20sdp"-->
        <!--android:layout_marginStart="@dimen/_20sdp"-->
        <!--android:layout_marginTop="@dimen/_20sdp"-->
        <!--android:animateLayoutChanges="true"-->
        <!--android:background="@drawable/rounded_white"-->
        <!--android:orientation="horizontal"-->
        <!--android:padding="@dimen/_10sdp">-->

        <android.support.design.widget.TextInputLayout

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!--</LinearLayout>-->

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_orange"
            android:padding="@dimen/_15sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

        <!--<TextView-->
        <!--android:id="@+id/skip"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/receiveSms"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:text="@string/skip"-->
        <!--android:textAllCaps="true"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="17sp" />-->
    </RelativeLayout><!--</RelativeLayout>-->
</ScrollView>
